# fsfn

ebuilds/app-laptop/fsfn/: fsfn-1.0-r1.ebuild  fsfn-1.0.ebuild  fsfn-1.1.ebuild  fsfn-1.2.ebuild  fsfn-2.0.ebuild
ebuilds/app-laptop/sonyacpi/: sonyacpi-0.1.ebuild
ebuilds/app-misc/fsfn/: fsfn-1.0.ebuild
fsfn/: AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  configure.scan  fsfn.kdevelop  fsfn.kdevelop.pcs  fsfn.kdevses  libtool
fsfn/aclocal/: libxosd_version.m4
fsfn/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
fsfn/debian/: fsfn  fsfn-conf
fsfn/debug/: Makefile  config.status
fsfn/debug/src/: Makefile  fsfn
fsfn/debug/src/.deps/: acpihandler.Po  basicmsg.Plo  fsfn.Plo  fsfn.Po  osd.Po  sound.Po
fsfn/etc/: fsfn.conf
fsfn/fedora/: fsfn
fsfn/gentoo/: fsfn  fsfn-conf
fsfn/man/: Makefile.am  Makefile.in  fsfn.1  fsfn.5
fsfn/selinux/src/policy/domains/program/: fsfn.te
fsfn/selinux/src/policy/macros/program/: fsfn_macros.te
fsfn/src/: Makefile  Makefile.am  Makefile.in  acpihandler.c  acpihandler.h  alsasound.c  alsasound.h  autodev.c  autodev.h  basicmsg.c  basicmsg.h  configure.scan  fsfn  fsfn.c  fsfn.old  fsfn.pod  generics.h  osd.c  osd.h  readconfig.c  readconfig.h  sound.c  sound.h
fsfn/src/.deps/: acpihandler.Po  basicmsg.Po  fsfn.Po  osd.Po  sound.Po
fsfn/templates/: c
sony_acpi/: Makefile  sony_acpi.c
