AC_INIT
AC_CONFIG_SRCDIR([configure.in])

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(fsfn, 0.4-svn)

dnl osd 
# additional options
AC_ARG_ENABLE(xosd,
	      [  --disable-xosd          Do not try to test for libxosd],
	      enable_xosd=no,
	      enable_xosd=yes)

dnl Default checks
AC_LANG([C])
AC_PROG_INSTALL
AC_HEADER_STDC
AC_CHECK_FUNCS([setlocale])
AC_CHECK_HEADERS([locale.h])
AC_CHECK_HEADERS([sys/ioctl.h])
AC_FUNC_FORK 
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIZE_T

AM_PATH_ALSA


LIBS="$LIBS $X_PRE_LIBS $X_LIBS  $X_EXTRA_LIBS"
CFLAGS="$CFLAGS $X_CFLAGS -Wall"

# Checks for XOSD
if test "x$enable_xosd" = "xyes"; then
  AM_PATH_LIBXOSD(AC_DEFINE(HAVE_LIBXOSD))
  AM_CHECK_LIBXOSD
fi

# Checks for pod2man
AC_PATH_PROG(POD2MAN,  pod2man, :)
if test "$POD2MAN" = ":"; then
	AC_MSG_ERROR([pod2man is required])
fi

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
