AC_INIT
AC_CONFIG_SRCDIR([configure.in])

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(fsfn, 1.3)

dnl osd 
# additional options
AC_ARG_ENABLE(xosd,
	      [  --disable-xosd          Do not try to test for libxosd],
	      enable_xosd=no,
	      enable_xosd=yes)
dnl moreconf
AC_ARG_ENABLE(moreconf,
	      [  --enable-moreconf       Enable more configurations],
	      enable_moreconf=yes,
	      enable_moreconf=no)

dnl Default checks
AC_LANG([C])
AC_PROG_INSTALL
AC_HEADER_STDC
AC_CHECK_FUNCS([setlocale])
AC_CHECK_HEADERS([locale.h])
AC_CHECK_HEADERS([sys/ioctl.h])
AC_FUNC_FORK 
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIZE_T

AM_PATH_ALSA


LIBS="$LIBS $X_PRE_LIBS $X_LIBS  $X_EXTRA_LIBS"
CFLAGS="$CFLAGS $X_CFLAGS -Wall"

# Checks for XOSD
if test "x$enable_xosd" = "xyes"; then
  AM_PATH_LIBXOSD(AC_DEFINE(HAVE_LIBXOSD))
  AM_CHECK_LIBXOSD
fi

#more conf
AC_MSG_CHECKING([if advanced configuration is required])
if test "x$enable_moreconf" = "xyes"; then
   AC_DEFINE(USE_MORECONF,[],[Use advanced configuration settings])
   AC_MSG_RESULT([yes])
else
   AC_MSG_RESULT([no])
fi

# Checks for pod2man
AC_PATH_PROG(POD2MAN,  pod2man, :)
if test "$POD2MAN" = ":"; then
	AC_MSG_ERROR([pod2man is required])
fi

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
